working on desktop sync app
